# smart-git-commit

./: .env_template  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
openspec/: project.md
openspec/changes/add-interactive-commit-preview/: proposal.md  tasks.md
openspec/changes/add-interactive-commit-preview/specs/commit-message/: spec.md
src/smart_git_commit/: __init__.py  __main__.py  cli.py  commit_message.py  config.py  errors.py  git_context.py  llm_client.py  semantic.py
tests/: test_cli.py  test_commit_message.py  test_dotenv.py  test_git_context.py  test_llm_client.py  test_main_module.py  test_semantic.py
