[project]
name = "smart-git-commit"
version = "0.1.0"
description = "Generate semantic git commit messages using an OpenAI-compatible Chat Completions API."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Smart Git Commit" }]
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
sgc = "smart_git_commit.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
